[package]
name = "bevy-3d-moving-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bytemuck = "1.15.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
